--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     <p>Ao longo da minha trajetória acadêmica tive a oportunidade de publicar artigos em periódicos nacionais e internacionais. Para ver uma lista com meus trabalhos mais importantes <a href="./papers.html">clique aqui</a>. Boa leitura!</p>
     <hr />
 <h3>Currículo Lattes:</h3>
-<p>Acessando meu <a href="">currículo lattes</a> é possível ver a lista completa com meus artigos e capítulos publicados, assim como as demais atividades acadêmicas desempenhadas.</p>    
+<p>Acessando meu <a href="http://lattes.cnpq.br/2278057839277779">currículo lattes</a> é possível ver a lista completa com meus artigos e capítulos publicados, assim como as demais atividades acadêmicas desempenhadas.</p>    
 </body>
 </html>
