--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Trajetória acadêmica de Melissa Salinas Ruiz</title>
+    <style> <!-- Adicionando CSS -->
+        h1, h2, h3 {
+        color: purple;
+        }
+
+        body {
+            background-color: gray;
+        }
+        </style>
     </head>
     <body>
     <h1>Trajetória acadêmica de Melissa Salinas Ruiz</h1> <img src="./1.jpg" width="200">
@@ -10,31 +19,33 @@
     <h2>Saudações!</h2>
     <p>Neste site compartilharei um pouco sobre minha formação acadêmica e principais trabalhos. Para começar, vamos conhecer minhas titulações no âmbito da pós-graduação:</p>
    <hr />
-    <h3>Titulações:</h3>
+    <h3>Titulações:</h3> 
+        <!-- Criando lista ordenada -->
     <ol>
         <li>Doutora em Sociedade, Cultura e Fronteiras pela Universidade Estadual do Oeste do Paraná;
             <ul>
-                <li>Clique <a href="https://tede.unioeste.br/handle/tede/6020"> aqui </a> para ler minha tese de doutorado.</li>
+                <li>Clique <a href="https://tede.unioeste.br/handle/tede/6020"> aqui </a> para ler minha tese de doutorado.</li> <!-- Direcionando a link externo para ler a tese -->
             </ul>
         </li>
         <li>Mestre em Sociedade, Cultura e Fronteiras pela Universidade Estadual do Oeste do Paraná;
             <ul>
-                <li>Clique <a href="https://tede.unioeste.br/handle/tede/3651">aqui </a> para conhecer minha dissertação de mestrado.</li>
+                <li>Clique <a href="https://tede.unioeste.br/handle/tede/3651">aqui </a> para conhecer minha dissertação de mestrado.</li> <!-- Direcionando a link externo para ler a dissertação -->
             </ul>
         </li>
         <li>Pós-graduada em Docência do Ensino Superior;</li>
     </ol>
     <p>Quanto às graduações concluídas, possuo título de:</p>
-    <ul>
+    <ul> <!-- Criando lista sem ordem para apresentar as formações -->
         <li>Bacharel em Direito pela Universidade Estadual do Oeste do Paraná</li>
         <li>Bacharel em Letras pela UNINTER</li>
     </ul>
-    <p>Atualmente sou <b>pesquisadora de pós-doutorado</b> financiada pela Fundação Araucária/SETI e estou cursando <b>Análise e Desenvolvimento de Sistemas</b>.</p>
+    <p>Fui <b>pesquisadora de pós-doutorado</b> financiada pela Fundação Araucária/SETI e estou cursando <b>Análise e Desenvolvimento de Sistemas</b>.</p>
     <hr />
     <h3>Principais produções acadêmicas:</h3>
     <p>Ao longo da minha trajetória acadêmica tive a oportunidade de publicar artigos em periódicos nacionais e internacionais. Para ver uma lista com meus trabalhos mais importantes <a href="./papers.html">clique aqui</a>. Boa leitura!</p>
     <hr />
 <h3>Currículo Lattes:</h3>
 <p>Acessando meu <a href="http://lattes.cnpq.br/2278057839277779">currículo lattes</a> é possível ver a lista completa com meus artigos e capítulos publicados, assim como as demais atividades acadêmicas desempenhadas.</p>    
+<script src="script.js"></script> <!-- Para adicionar Javascript --> 
 </body>
 </html>
