Atualizando cor do fundo index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         }
 
         body {
-            background-color: gray;
+            background-color: #D3D3DE;
         }
         </style>
     </head>
