aplicando css externo index.html

--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Trajetória acadêmica de Melissa Salinas Ruiz</title>
-    <style> <!-- Adicionando CSS -->
-        h1, h2, h3 {
-        color: purple;
-        }
-
-        body {
-            background-color: #D3D3DE;
-        }
-        </style>
+   <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
     <h1 id="saudacao">Trajetória acadêmica de Melissa Salinas Ruiz</h1> <img src="./1.jpg" width="200">
