--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Trajetória acadêmica de Melissa Salinas Ruiz</title>
-   <link rel="stylesheet" href="style.css"/>
+   <link rel="stylesheet" href="style.css"/>  <!-- Adicionando CSS externo -->
     </head>
     <body>
-    <h1>Trajetória acadêmica de Melissa Salinas Ruiz</h1> <img src="./1.jpg" width="200">
+    <h1>Trajetória acadêmica de Melissa Salinas Ruiz</h1> <img src="./1.jpg" width="200">  <!-- Adicionando minha foto -->
     <hr />
     <h2>Saudações!</h2>
     <p>Neste site compartilharei um pouco sobre minha formação acadêmica e principais trabalhos. Para começar, vamos conhecer minhas titulações no âmbito da pós-graduação:</p>
@@ -38,6 +38,20 @@
     <hr />
 <h3>Currículo Lattes:</h3>
 <p>Acessando meu <a href="http://lattes.cnpq.br/2278057839277779">currículo lattes</a> é possível ver a lista completa com meus artigos e capítulos publicados, assim como as demais atividades acadêmicas desempenhadas.</p>    
+
+<h4>Fale comigo:</h4>  <!-- Criando formulário -->      
+<label for="nome">Nome:</label>
+    <input type="text" id="nome" name="nome" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="mensagem">Mensagem:</label>
+    <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+
+    <button type="submit">Enviar</button>
+  </form>
+
 <script src="script.js"></script> <!-- Para adicionar Javascript --> 
 </body>
 </html>
